# LMTpred

./: CMakeLists.txt  MemoryPool.cpp  MovingAvg.cpp  MovingAvg.h  apiaccess.cpp  apiaccess.h  case_tester.cpp  circularDeque.h  data.h  main.cpp  readme.md  sample.json
